
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PROTO_3G_A11_PORT ;
 int fflush (int ) ;
 int printf (char*,int) ;
 int send (int,char*,int,int ) ;
 scalar_t__ sock_connect (int,long,int ) ;
 int sock_disconnect (int) ;
 int sock_udp_create () ;
 int stdout ;

__attribute__((used)) static int
sock_send_payload (long dest, int port, char *packet, int packet_len)
{
    int sock;


    sock = sock_udp_create ();
    if (sock_connect (sock, dest, PROTO_3G_A11_PORT) < 0)
     return -1;


    send (sock, packet, packet_len, 0);

    printf ("[-] UDP packet sent (%d bytes).\n", packet_len);
    fflush (stdout);


    sock_disconnect (sock);

    return 0;
}
