; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_sock_send_payload.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_sock_send_payload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROTO_3G_A11_PORT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"[-] UDP packet sent (%d bytes).\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32, i8*, i32)* @sock_send_payload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sock_send_payload(i64 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = call i32 (...) @sock_udp_create()
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* %10, align 4
  %13 = load i64, i64* %6, align 8
  %14 = load i32, i32* @PROTO_3G_A11_PORT, align 4
  %15 = call i64 @sock_connect(i32 %12, i64 %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %29

18:                                               ; preds = %4
  %19 = load i32, i32* %10, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @send(i32 %19, i8* %20, i32 %21, i32 0)
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* @stdout, align 4
  %26 = call i32 @fflush(i32 %25)
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @sock_disconnect(i32 %27)
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %18, %17
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @sock_udp_create(...) #1

declare dso_local i64 @sock_connect(i32, i64, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @sock_disconnect(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
